# hls-m365-seedkit

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml  seed-config.example.yaml  spec.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: REFERENCE.md
m365seed/: __init__.py  calendar.py  chats.py  cleanup.py  cli.py  config.py  files.py  graph.py  mail.py  planner.py  profiles.py  register.py  setup.py  sharepoint.py  teams.py  theme_content.py
m365seed/data/: themes.json
m365seed/templates/healthcare/: compliance_checklist.txt.j2  discharge_planning.txt.j2  email_body.html.j2  handoff_checklist.txt.j2  hipaa_training.txt.j2  quality_metrics.txt.j2  sop.txt.j2  staffing_roster.txt.j2
m365seed/templates/medtech/: capa_log.txt.j2  design_history.txt.j2  email_body.html.j2  manufacturing_validation.txt.j2  ncr_report.txt.j2  production_yield.txt.j2  risk_analysis.txt.j2  submission_510k.txt.j2
m365seed/templates/payor/: adjudication_metrics.txt.j2  claims_sop.txt.j2  email_body.html.j2  grievance_appeals.txt.j2  market_conduct.txt.j2  member_satisfaction.txt.j2  network_adequacy.txt.j2  provider_directory.txt.j2
m365seed/templates/pharma/: email_body.html.j2  enrollment_tracker.txt.j2  glp_compliance.txt.j2  (+5 more)
prompt/: copilot_m365_demo_tenant_seeding_prompt.md
tasks/: lessons.md  todo.md
tests/: test_calendar.py  test_chats.py  test_cleanup.py  test_cli.py  test_config.py  test_files.py  test_graph.py  test_mail.py  test_planner.py  test_profiles.py  test_register.py  test_setup.py  test_sharepoint.py  test_teams.py
